# colored-logcat

./: Cargo.toml  README.md
.claude/: settings.local.json
src/: adb.rs  app.rs  clipboard.rs  export.rs  filter.rs  json.rs  main.rs  parser.rs
src/ui/: crash_panel.rs  device_panel.rs  filter_bar.rs  help.rs  log_view.rs  mod.rs  status_bar.rs
